# anthropic-sdk-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/anthropic-sdk/: Cargo.toml
crates/anthropic-sdk/examples/: batches_create.rs  batches_results.rs  beta_files_upload.rs  beta_messages_count_tokens.rs  beta_messages_create.rs  beta_messages_stream.rs  messages_create.rs  messages_stream.rs  smoke_mock.rs
crates/anthropic-sdk/src/: error.rs  jsonl.rs  lib.rs  pagination.rs
crates/anthropic-sdk/src/client/: mod.rs
crates/anthropic-sdk/src/resources/: completions.rs  mod.rs  models.rs
crates/anthropic-sdk/src/resources/beta/: files.rs  messages.rs  mod.rs  models.rs
crates/anthropic-sdk/src/resources/messages/: batches.rs  mod.rs
crates/anthropic-sdk/src/streaming/: message_stream.rs  mod.rs  raw_stream.rs  sse.rs
crates/anthropic-sdk/src/types/: batches.rs  completions.rs  files.rs  messages.rs  mod.rs  models.rs  shared.rs
crates/anthropic-sdk/tests/: sdk.rs
