[package]
name = "anthropic-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for the Anthropic API"
repository = "https://github.com/stellarlinkco/anthropic-sdk-rust"

[dependencies]
bytes = "1"
fastrand = "2"
futures-core = "0.3"
futures-util = "0.3"
httpdate = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tokio-util = { version = "0.7" }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
